Add cors support

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@
 *.user
 *.userosscache
 *.sln.docstates
+bin
+obj
+.vscode
+*.db
+
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
