Add detailed User Object and Dtos,

--- a/DatingApp.API.csproj
+++ b/DatingApp.API.csproj
@@ -5,11 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20180214165246_ExtendedUserClass.cs" />
+    <Compile Remove="Migrations\20180214165246_ExtendedUserClass.Designer.cs" />
+    <Compile Remove="Migrations\20180214173148_extendedUserClass.cs" />
+    <Compile Remove="Migrations\20180214173148_extendedUserClass.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
