--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key" 
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DatingApp.db"
+    "DefaultConnection": "server=192.168.99.100;port=32768;database=DatingApp;user=datingApp;password=fh5QqX6tu#Pg>**y"
   },
   "Logging": {
     "IncludeScopes": false,
